--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,17 @@ keras~=2.8.0
 numpy~=1.21.6
 typing~=3.7.4.3
 hmmlearn~=0.2.4
-scipy~=1.8.1
+scipy~=1.9.2
 pandas~=1.4.3
 tensorflow~=2.8.0
 matplotlib~=3.3.3
 librosa~=0.9.1
 torch~=1.11.0
 tqdm~=4.64.0
-SoundFile~=0.10.3.post1
+SoundFile~=0.11.0
 spafe~=0.1.2
 sequentia~=0.12.1
 sklearn~=0.0
 scikit-learn~=1.1.1
+pydub==0.25.1
 lpctorch2
